[MODIFY] 基本功能完成
25-08-02 15:01

1. 完成基本功能

Test: 测试通过

Signed-off-by: 纸箱丶战机 <970378809@qq.com>

--- a/test/test_ini_parser.ini
+++ b/test/test_ini_parser.ini
@@ -14,7 +14,7 @@ host=localhost
 port = 8080  ; 行内注释（带空格）
 url = "http://example.com/path?a=1&b=2"  ; 引号包裹值
 desc=这是一行描述
-     这是第二行描述（多行值测试）
+     ;这是第二行描述（多行值测试）
 
 ; 嵌套层级section
 [db.mysql]
