[MODIFY] 增加换行功能
25-08-06 21:40

1. 增加换行功能

Test: 测试成功

Signed-off-by: 纸箱丶战机 <970378809@qq.com>

--- a/test/test_ini_parser.ini
+++ b/test/test_ini_parser.ini
@@ -54,6 +54,7 @@ emoji=😊👍
 mixed=Hello 世界
 
 ; 极端情况
-[edge_cases]
-long_line=这是一个非常长的键值对，用于测试解析器对长字符串的处理能力，可能包含各种字符：!@#$%^&*()_+-=[]{}|;':",./<>?`~以及数字1234567890和空格，目的是验证解析器是否会因为长度或特殊字符导致崩溃或截断...（此处省略1000个字符）
+[edge_cases
+long_line=这是一个非常长的键值对，用于测试解析\
+器对长字符串的处理能力，可能包含各种字符：!@#$%^&*()_+-=[]{}|;':",./<>?`~以及数字1234567890和空格，目的是验证解析器是否会因为长度或特殊字符导致崩溃或截断...（此处省略1000个字符）
 no_value=  ; 只有键，无值
