[MODIFY] 完成基本功能
25-08-07 21:16

1. 修改dunmp()函数
2. 修改ini_test.cc
3. 修改测试文件
4. 完善README

Test: 测试通过

Signed-off-by: 纸箱丶战机 <970378809@qq.com>

--- a/test/test_ini_parser.ini
+++ b/test/test_ini_parser.ini
@@ -1,60 +1,94 @@
-; 这是一个INI解析测试文件
-; 包含标准语法、非标准写法、编码测试、特殊字符等场景
+; 这是一个INI解析测试文件（优化版）
+; 覆盖标准语法、边界情况、特殊字符、格式变体等场景
 
-# 全局键值对（无section）
+
+# 一、基础语法测试
+; 全局键值对（无section）,会放在global中
 version=1.0.0
 author=张三
 is_debug=on
 timeout=30
 pi=3.1415926
 
-; 基础section
-[server]
+
+# 二、Section与键名格式测试
+[server]  ; 标准section
 host=localhost
-port = 8080  ; 行内注释（带空格）
-url = "http://example.com/path?a=1&b=2"  ; 引号包裹值
-desc=这是一行描述
-     ;这是第二行描述（多行值测试）
+port = 8080  ; 键值间空格+行内;注释
+url = "http://example.com/path?a=1&b=2"  ; 双引号包裹URL（含特殊字符）
 
-; 嵌套层级section
-[db.mysql]
-host=192.168.1.1
-user='root'  ; 单引号值
-password=123;456  ; 值包含分号（非注释）
-port=3306
-timeout =  60   ; 键值前后多空格
+[Server]  ; 大小写不同的section（测试大小写敏感性）
+port=8081  ; 与[server]的port对比
 
-[db.redis]
-host=127.0.0.1
-port = 6379
-password=
-db=0  # 另一种注释符号
+[section with space]  ; section名含空格
+key=value  ; 测试含空格的section是否被正确识别
 
-; 重复键测试
-[log]
-level=info
-level=debug  ; 重复键，测试覆盖/忽略策略
-output=file
-output=console
+[sec=tion]  ; section名含=（特殊字符）
+key=val
 
-; 特殊字符测试
-[special]
-path=C:\Windows\System32  ; 反斜杠
-empty=  ; 空值
-with_equal=key=value  ; 值包含等号
-with_comment=line;not_comment  ; 值包含分号（非注释位置）
-tab_separated	key=value  ; 键名含制表符
-space key=with space  ; 键名含空格
 
-; Unicode字符测试
-[unicode]
-中文键=测试内容
-日文=こんにちは
-emoji=😊👍
-mixed=Hello 世界
+# 三、值的格式测试
+[value_formats]
+single_quoted='单引号值;含分号'  ; 单引号内的;不视为注释
+mixed_quotes="引号内包含'单引号'"  ; 双引号内嵌套单引号
+inner_comment="值内#不视为注释;也不是注释"  ; 引号内的#和;均为值的一部分
+trailing_space="值末尾有空格 "  ; 引号内的尾随空格是否保留
+empty_quoted=""  ; 空双引号（应解析为空值）
+single_empty=''  ; 空单引号（应解析为空值）
 
-; 极端情况
-[edge_cases
-long_line=这是一个非常长的键值对，用于测试解析\
-器对长字符串的处理能力，可能包含各种字符：!@#$%^&*()_+-=[]{}|;':",./<>?`~以及数字1234567890和空格，目的是验证解析器是否会因为长度或特殊字符导致崩溃或截断...（此处省略1000个字符）
-no_value=  ; 只有键，无值
+
+# 四、多行值与续行符测试
+[multi_line]
+; 测试1：无续行符的多行值（依赖解析器对缩进的处理）
+desc=这是第一行描述
+    这是第二行描述（缩进多行）
+    这是第三行描述
+
+; 测试2：带续行符\的多行值（模拟C语言#define风格）
+long_text=这是一段需要续行的长文本，\
+    第二行带缩进（续行符后无空格），\
+第三行无缩进（续行符后有空格）\
+    第四行直接拼接（验证续行符逻辑）
+
+; 测试3：引号内的多行值
+quoted_multi="引号内的第一行\
+引号内的第二行（续行符生效）\
+引号内的第三行"
+
+
+# 五、特殊字符测试
+[special_chars]
+path=C:\Windows\System32  ; 反斜杠（非转义）
+key_with_tab	= tab分隔的键  ; 键名含制表符（\t）
+key with space=值含 空格  ; 键名含空格，值含连续空格
+value_with_equal=key=value  ; 值包含=
+value_with_bracket=val[ue]  ; 值包含[]
+empty_value=  ; 空值（无内容）
+whitespace_value=   ; 纯空白值（三个空格）
+
+
+# 六、重复与覆盖测试
+[duplicate]
+name=first  ; 首次出现
+name=second  ; 重复键（测试覆盖策略）
+priority=high
+priority=medium  ; 第二次重复
+
+
+# 七、边界与错误格式测试
+[edge_cases]
+unclosed_section  ; 无=的行（非键值对，应视为无效行）
+no_value=  ; 有键无值（值为空）
+[invalid_section_name=with=equal]  ; section名含=（极端情况）
+[   empty_section   ]  ; section名前后有空白（测试trim效果）
+key_with_quote"=value  ; 键名含未闭合双引号
+mixed_quote="a'b'c"  ; 双引号内嵌套单引号（无冲突）
+single_quote_with_double='x"y"z'  ; 单引号内嵌套双引号（无冲突）
+
+
+# 八、续行符细节测试
+[escape_line]
+trailing_escape=line1\  ; 续行符后有空格（应忽略空格，正常续行）
+line2  ; 上一行的续行内容
+escape_in_quote="quote内的续行符\
+是否生效"  ; 引号内的续行符是否被解析
