[MODIFY] 简化获取value的API
25-08-11 21:17

1. 简化获取value的API
2. 修改测试文件
3. 修改readme

Test: 测试通过

Signed-off-by: 纸箱丶战机 <970378809@qq.com>

--- a/test/test_ini_parser.ini
+++ b/test/test_ini_parser.ini
@@ -13,8 +13,8 @@ pi=3.1415926
 
 # 二、Section与键名格式测试
 [server]  ; 标准section
-host=localhost
 port = 8080  ; 键值间空格+行内;注释
+host = localhost
 url = "http://example.com/path?a=1&b=2"  ; 双引号包裹URL（含特殊字符）
 
 [Server]  ; 大小写不同的section（测试大小写敏感性）
@@ -92,3 +92,16 @@ trailing_escape=line1\  ; 续行符后有空格（应忽略空格，正常续行
 line2  ; 上一行的续行内容
 escape_in_quote="quote内的续行符\
 是否生效"  ; 引号内的续行符是否被解析
+
+
+# 九、数据库相关配置（供测试用例读取）
+[db.redis]
+host=127.0.0.1
+port=6379
+password=redis_pass
+
+[db.mysql]
+host=localhost
+port=3306
+password=mysql;pass123  ; 包含分号的密码（测试特殊字符保留）
+timeout=30.5  ; 浮点型超时时间
